update /auth route
