# docs/swagger.json
@@ -599,11 +599,11 @@
                     }
                 }
             },
-            "delete": {
+            "post": {
                 "produces": [
                     "application/json"
                 ],
-                "summary": "刪除使用者",
+                "summary": "新增使用者",
                 "parameters": [
                     {
                         "maxLength": 255,
@@ -646,14 +646,12 @@
                         }
                     }
                 }
-            }
-        },
-        "/auth/new": {
-            "post": {
+            },
+            "delete": {
                 "produces": [
                     "application/json"
                 ],
-                "summary": "新增使用者",
+                "summary": "刪除使用者",
                 "parameters": [
                     {
                         "maxLength": 255,
